k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-svc
  namespace: web-app
spec:
  type: ClusterIP
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
