k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flask-app-netpol
  namespace: web-app
spec:
  podSelector:
    matchLabels:
      app: flask-app
  policyTypes:
    - Ingress
    - Egress

  # Allow inbound traffic on port 5000 (from LB / Ingress controller)
  ingress:
    - ports:
        - protocol: TCP
          port: 5000

  egress:
    # Allow DNS resolution (kube-dns)
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

    # Allow traffic to MongoDB VM (10.3.0.10:27017)
    - to:
        - ipBlock:
            cidr: 10.3.0.10/32
      ports:
        - protocol: TCP
          port: 27017
