k8s/kyverno-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-cosign-signature
spec:
  # Enforce = block unsigned images | Audit = log only
  validationFailureAction: Enforce
  background: false
  webhookTimeoutSeconds: 30
  rules:
    # Rule 1: Only allow images from our Artifact Registry
    - name: restrict-image-source
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - web-app
                - demo
      validate:
        message: "Only images from australia-southeast1-docker.pkg.dev are allowed in this namespace."
        pattern:
          spec:
            containers:
              - image: "australia-southeast1-docker.pkg.dev/*"

    # Rule 2: Verify Cosign keyless signature on AR images
    - name: verify-image-signature
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - web-app
                - demo
      verifyImages:
        - imageReferences:
            - "*"
          attestors:
            - entries:
                - keyless:
                    issuer: "https://token.actions.githubusercontent.com"
                    subject: "https://github.com/jasaz/deploy-webapp/*"
                    rekor:
                      url: "https://rekor.sigstore.dev"
